# rsrca

./: .gitignore  CMakeLists.txt  README.md
doc/: bind9_no-mtu-opt.patch  mscvd-ipv6-random-source-attack.md  mscvd-msdns-no-cachemem-limit.md  txt4000
netns/: README  mtu1280-netns.env.sample  mtu1280-netns.service  mtu1280-netns.sh  ndppd.conf.sample
src/: digping  dns-utils.c  dns-utils.h  inetchksm.c  inetchksm.h  pmtu-attack.c  rnd-pmtu.sh  rnd_cpp.cpp  rnd_cpp.h  rnd_rdrnd.c  rnd_rdrnd.h  rnd_well512.c  rnd_well512.h  rsrca-echo.c  rsrca-ns.c  rsrca-rnd.c  rsrca.c  scan-dns-servers.sh  spew-dns-servers.sh
tests/: run_rngtest
